styles/styles.css
/* css reset */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* custom properties */
:root{
    --hero-bg-color: #b4d0e7;
    --blue-btn-color: #0061ff;
    --fter-color: #000;
    --hdr-height: 75px;

    --bg-designit: #a2d39b;
    --bg-asu: #61082b;
    --bg-uf: #0093ce;
    --bg-topps: #ff1c1c;
    --bg-wbr: #d5001f;
    --bg-hearst: #b4d0e7;
    --bg-lonely-planet: #0d2481;
    --bg-cco: #ffd830;

    --bg-main-logo: #f5f5f5;
}

/* debug */
.debug .db-border{
    border: 2px dotted black;
    height: 200px;
}

.debug .flex-left, .debug .flex-right, .debug .flex-item{
    border: 2px dashed black;
}


/* generals */
html{
    font-size: 18px;
}

body{
    font-family: "Opens Sans", sans-serif;
    padding-top: var(--hdr-height);
}

li{
    list-style: none;
}

header a{
    color: black;
    text-decoration: none;
}

a.btn{
    text-decoration: none;
}

img{
    max-width: 100%;
    height: auto;
}

hr{
    margin: 2.5rem 0;
    width: 20%;
    color: lightgray;
}

h1{
    font-size: 4rem;
    font-weight: 900;
    padding-bottom: 4.5rem;
}

h2{
    font-size: 2rem;
    padding-bottom: 3.5rem;
}

h3{
    font-size: 1.5rem;
    padding-bottom: 1.5rem;
}

h4{
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

h6{
    margin-bottom: 1rem;
    font-size: 1rem;
}

p{
    line-height: 1.4;
}

/* utilites */
.container-big{
    max-width: 1440px;
    margin: 0 auto;
}

.container-small{
    max-width: 1080px;
    margin: 0 auto;
}

.radio-btn{
    display: inline-block;
    width: 1rem;
    height: 1rem;
    border-radius: 50%;
    margin-right: .5rem;
}

.radio-btn.radio-checked{
    border: .25rem solid var(--blue-btn-color);
}

.radio-btn.radio-unchecked{
    border: .1rem solid gray;
}

.d-flex{
    display: flex;
}

.d-flex.justify-center{
    justify-content: center;
}

.d-flex.justify-space-between{
    justify-content: space-between;
}

.d-flex.f-wrap{
    flex-wrap: wrap;
}

.d-flex.align-center{
    align-items: center;
}

.d-flex.align-flex-start{
    align-items: flex-start;
}

.d-flex.f-gap10{
    gap: 10px;
}

.d-flex.f-gap40{
    gap: 40px;
}

.d-flex.f-rowgap20{
    row-gap: 20px;
}

.d-flex.flex-column{
    flex-direction: column;
}

.btn{
    padding: 15px 20px;
}

.btn.btn-main{
    background-color: var(--blue-btn-color);
    color: white;
}

.btn.btn-secondary{
    background-color: white;
    color: black;
}

.border-black{
    border: 1px solid black;
}

.mr2{
    margin-right: 2rem;
}

.mb1{
    margin-bottom: 1rem;
}

.mb2{
    margin-bottom: 2rem;
}

.mb3{
    margin-bottom: 3rem;
}

.mb5{
    margin-bottom: 5rem;
}

.border-bottom{
    border-bottom: 1px solid black;
}


/* HEADER */
header{
    height: var(--hdr-height);
    /* it's needed otherwise background is transparent */
    background-color: #fff;
    padding: 20px 10px;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1;    
}

header .logo{
    margin-right: 20px;
}

header a{
    padding: 10px;
}

/* MAIN */
section{
    margin-bottom: 8rem;
}

main .btn{
    display: inline-block;
}

/* hero section */
section#hero{
    background: linear-gradient(var(--hero-bg-color) 85%, #FFF 15%);
    padding-top: 3rem;
    font-size: 1.2rem;
}

#hero .flex-left{
    flex: 0 0 30%;
    position: relative;
}

#hero .flex-right{
    flex: 0 0 70%;
}

#hero .flex-left > *{
    margin-bottom: 2rem;
}

#hero .fa-arrow-down{
    position: absolute;
    bottom: 15%;
    left: 0;
    padding-bottom: 20px;
}

/* shop section */
.card-flex{
    flex: 0 0 calc((100% - 80px) / 3);
}

.sopphing-cards-container{
    margin: 2rem 0;
}

.card{
    border: 1px solid lightgray;
}

.card .card-title{
    border-bottom: 1px solid lightgray;
    text-align: center;
    padding: 10px
}

.card .card-body{
    padding: 2rem;
    font-size: .9rem;
}

.fa-check{
    color: var(--blue-btn-color);
}

.fa-ul{
    margin-left: 1.5rem;
}

.card-body .price{
    font-weight: bolder;
}

.card-body .price-recurrency{
    color: gray;
    margin-bottom: 3rem;
}

.card-body ul li{
    padding: .5rem 0;
}

.card-body .btn{
    width: 100%;
    text-align: center;
    margin: 0 auto 1rem;
}



.card-body.d-flex .flex-left{
    flex-basis: 66%;
}

/* partners section */
#partners .flex-left{
    flex: 0 0 55%;
}

#partners .flex-right{
    flex: 0 0 45%;
    padding: 3rem;
}

/* business section */
.business-promo-container{
    margin: 0 -2rem;
}

#dropbox-business-promo .flex-item{
    width: calc(100% / 3);
    padding: 2rem;
}

.partners-logoes-container > *{
    flex: 0 0 calc(100% / 3);
}

/* business partners logoes */
.partners-logoes-container img{
    width: 50%;
}

.partners-logoes-container .flex-item{
    flex: 0 0 50%;
    height: 300px;
}

#dropbox-business-partners .flex-center{
    background-color: var(--bg-main-logo);
    padding: 2.5rem;
}

/* partners-logo backgrounds */
.bg-designit{
    background-color: var(--bg-designit)
}

.bg-asu{
    background-color: var(--bg-asu);
}

.bg-uf{
    background-color: var(--bg-uf);
}

.bg-topps{
    background-color: var(--bg-topps);
}

.bg-wbr{
    background-color: var(--bg-wbr);
}

.bg-hearst{
    background-color: var(--bg-hearst);
}

.bg-lonely-planet{
    background-color: var(--bg-lonely-planet);
}

.bg-cco{
    background-color: var(--bg-cco);
}

.bus-part-bottom-part{
    background-color: var(--hero-bg-color);
    color: #61082b;
    padding: 100px 0;
}

.bus-part-bottom-part .flex-left{
    flex: 0 0 60%;
}

.bus-part-bottom-part .flex-right{
    flex: 0 0 40%;
    text-align: right;
    align-self: flex-start;
}

/* FAQ */
.faq-row{
    padding: 1.5rem 1.5rem 1.5rem 0;
    cursor: pointer;
}

/* FOOTER */
footer{
    background-color: var(--fter-color);
    color: white;
    padding: 4rem 0;
}

footer a{
    text-decoration: none;
    color: white;
}

footer li{
    padding-bottom: 1rem;
}

footer .flex-item{
    flex: 0 0 calc(100% / 5);
    margin-bottom: 50px;
}

.fter-top{
    padding-bottom: 4rem;
}

footer .language-selector{
    padding-top: 2rem;
    padding-right: 2rem;
    border-top: 2px solid gray;
    color: gray;
    cursor: pointer;
}

